--- a/css/styles.css
+++ b/css/styles.css
@@ -234,6 +234,18 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
+.restaurant-info-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 0 20px 0;
+}
+.r-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 95%;
+}
 #restaurant-img {
   width: 90%;
   border-radius: 10px 10px 0 0;
@@ -331,5 +343,16 @@ nav h1 a {
   }
   #reviews-container h2 {
     font-size: 2.4rem;
+  }
+}
+
+@media screen and (min-width: 1023px) {
+  .restaurant-info-box {
+    flex-direction: row;
+    align-items: unset;
+  }
+
+  .r-box {
+    justify-content: center;
   }
 }
