--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ nav h1 a {
   margin: 0;
   font-size: 1.1rem;
 }
-#restaurants-list li a {
+#restaurants-list li button {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
