--- a/css/styles.css
+++ b/css/styles.css
@@ -70,30 +70,28 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 
 /* ====================== Navigation ====================== */
-nav {
+header h1 {
+  position: relative;
   width: 100%;
   height: 80px;
   background-color: #252831;
-  position: relative;
-}
-nav h1 {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
   margin: 0;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-nav h1 a {
+header h1 a {
+  position: relative;
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
+  text-align: center;`
 }
 #breadcrumb {
-    padding: 10px 0 16px 15px;
+    padding: 0;
     list-style: none;
-    background-color: #eee;
     margin: 0;
     width: 100%;
 }
@@ -298,7 +296,7 @@ nav h1 a {
 #reviews-container {
   padding: 30px 0 80px;
 }
-#reviews-container h2 {
+#reviews-container h3 {
   color: #f58500;
   font-size: 2rem;
   font-weight: 300;
